--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "mongoose": "^8.4.4",
+    "plotly.js-dist": "^2.33.0",
     "serialport": "^12.0.0",
     "ws": "^8.17.0"
   }
