--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@daypilot/daypilot-lite-javascript": "^3.25.0",
     "excel": "^1.0.1",
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
