--- a/oven_config.json
+++ b/oven_config.json
@@ -50,5 +50,6 @@
         },
         "sequence": "P1 P2 T1 T2 Vx Vz Ct Vt",
         "com_port": "COM17"
-    }
+    },
+    "transmitter_com": "COM9"
 }
